--- a/archiving/enter/style/style.css
+++ b/archiving/enter/style/style.css
@@ -15,21 +15,21 @@
   box-sizing: border-box;
 }
 
-.header {
+.nav {
   display: flex;
   gap: 24px;
   justify-content: space-between;
   padding: 12px;
   background-color: aquamarine;
 }
-.header > a {
+.nav a {
   font-family: Happiness-Sans-Title;
   font-size: 36px;
   font-weight: 900;
   color: black;
   text-decoration: none;
 }
-.header > a :hover {
+.nav a:hover {
   -webkit-text-decoration: underline red wavy 4px;
           text-decoration: underline red wavy 4px;
 }
