--- a/archiving/enter/style/style.scss
+++ b/archiving/enter/style/style.scss
@@ -17,21 +17,21 @@
   box-sizing: border-box;
 }
 
-.header {
+.nav {
   display: flex;
   gap: 24px;
   justify-content: space-between;
   padding: 12px;
   background-color: aquamarine; //추후 삭제
 
-  & > a {
+  & a {
     font-family: Happiness-Sans-Title;
     font-size: 36px;
     font-weight: 900;
     color: black;
     text-decoration: none;
 
-    :hover {
+    &:hover {
       text-decoration: underline red wavy 4px;
     }
   }
