--- a/archiving/enter/style/style.scss
+++ b/archiving/enter/style/style.scss
@@ -39,13 +39,14 @@
 
 .main {
   padding: 12px;
-  background-color: blue; //추후삭제
+
+  // background-color: blue; //추후삭제
 
   &--cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* 3개의 열을 동일한 너비로 설정 */
     gap: 20px; /* 카드들 사이의 간격 */
-    background-color: brown; //추후 삭제
+    // background-color: brown; //추후 삭제
   }
 }
 
@@ -54,14 +55,16 @@
   align-items: center; /* 수평 중앙 정렬 */
   justify-content: center; /* 수직 중앙 정렬 */
   text-align: center;
+  background-color: aqua;
 
-  & > img {
+  & img {
     max-width: 100%; /* 이미지를 카드의 너비에 맞추어 조정 */
-    height: auto; /* 이미지 비율을 유지하면서 높이를 자동으로 조정 */
+    height: 100%;
     margin-bottom: 10px; /* 이미지와 텍스트 사이의 간격 */
+    object-fit: contain;
   }
 
-  & > p {
+  & p {
     text-align: center;
   }
 }
