--- a/style/style.css
+++ b/style/style.css
@@ -20,6 +20,7 @@
   gap: 24px;
   justify-content: space-between;
   padding: 12px;
+  overflow-x: scroll;
   background-color: aquamarine;
 }
 .nav a {
