--- a/style/style.scss
+++ b/style/style.scss
@@ -22,6 +22,7 @@
   gap: 24px;
   justify-content: space-between;
   padding: 12px;
+  overflow-x: scroll;
   background-color: aquamarine; //추후 삭제
 
   & a {
