--- a/Home/style/style.css
+++ b/Home/style/style.css
@@ -11,7 +11,9 @@
   font-family: Happiness-Sans-Title;
   src: url("../../../webfont/Happiness-Sans-Title.woff2");
 }
-* {
+*,
+::before,
+::after {
   box-sizing: border-box;
 }
 
@@ -20,6 +22,7 @@ body {
   font-family: Happiness-Sans-Regular;
   font-size: 18px;
   line-height: 1.5;
+  background-color: oklch(9400% 0.1 141deg);
 }
 
 h1,
@@ -30,39 +33,85 @@ p {
   margin: 0;
 }
 
+.section {
+  margin-bottom: 24px;
+}
+
 .nav {
   display: flex;
-  gap: 24px;
+  gap: 160px;
   justify-content: space-between;
-  padding: 12px;
+  padding: 24px;
+  overflow-x: scroll;
+}
+@media (width <= 960px) {
+  .nav {
+    gap: 80px;
+  }
 }
 .nav a {
   font-family: Happiness-Sans-Title;
   font-size: 36px;
-  font-weight: 900;
   color: black;
   text-decoration: none;
 }
+@media (width <= 430px) {
+  .nav a {
+    font-size: 24px;
+  }
+}
 .nav a:hover {
-  -webkit-text-decoration: underline red wavy 4px;
-          text-decoration: underline red wavy 4px;
+  -webkit-text-decoration: underline #fefff3 wavy 3px;
+          text-decoration: underline #fefff3 wavy 3px;
+}
+.nav__left {
+  display: flex;
+  gap: 80px;
+}
+@media (width <= 960px) {
+  .nav__left {
+    gap: 48px;
+  }
+}
+@media (width <= 960px) {
+  .nav__left-text {
+    display: none;
+  }
+}
+.nav__left-icon {
+  display: none;
+}
+@media (width <= 960px) {
+  .nav__left-icon {
+    display: inline;
+  }
 }
 
 .header {
   display: flex;
   justify-content: center;
+  font-size: 14px;
+}
+@media (width <= 430px) {
+  .header {
+    font-size: 12px;
+  }
 }
 .header__content {
   max-width: 900px;
   text-align: center;
 }
 .header__content h1 {
+  margin-bottom: 12px;
   font-family: Happiness-Sans-Bold;
+}
+.header__content p {
+  padding-inline: 24px;
 }
 
 .main {
   width: 100%;
-  padding: 24px;
+  padding-inline: 24px;
   font-family: Happiness-Sans-Regular;
 }
 .main ol {
@@ -71,7 +120,7 @@ p {
   list-style: none; /* 기본 리스트 스타일도 제거 */
 }
 .main li {
-  padding: 10px 0;
+  padding: 12px 0;
   margin: 0;
   border-bottom: 1px solid black; /* 모든 리스트 아이템에 아래쪽 선 추가 */
 }
@@ -87,20 +136,20 @@ p {
 .main--content-number {
   padding-block: 4px;
   padding-inline: 12px;
-  font-size: 20px;
+  font-size: 16px;
   color: white;
-  background-color: red;
+  background-color: oklch(65% 0.2 140deg);
   border-radius: 999px;
 }
 .main--content-title {
-  font-size: 24px;
+  font-size: 20px;
 }
 .main--content-button {
   display: inline-block;
-  padding: 10px 20px;
-  font-size: 32px;
+  padding-inline: 20px;
+  font-size: 28px;
   transition: transform 0.3s ease; /* 회전 애니메이션 추가 */
 }
 .main--content-button.rotate {
-  transform: rotate(45deg); /* 클릭시 90도 회전 */
+  transform: rotate(-45deg); /* 클릭시 90도 회전 */
 }
