--- a/Home/style/style.scss
+++ b/Home/style/style.scss
@@ -13,7 +13,9 @@
   src: url('../../../webfont/Happiness-Sans-Title.woff2');
 }
 
-* {
+*,
+::before,
+::after {
   box-sizing: border-box;
 }
 
@@ -22,6 +24,7 @@ body {
   font-family: Happiness-Sans-Regular;
   font-size: 18px;
   line-height: 1.5;
+  background-color: oklch(9400% 0.1 141deg);
 }
 
 h1,
@@ -32,23 +35,58 @@ p {
   margin: 0;
 }
 
+.section {
+  margin-bottom: 24px;
+}
+
 .nav {
   display: flex;
-  gap: 24px;
+  gap: 160px;
   justify-content: space-between;
-  padding: 12px;
+  padding: 24px;
+  overflow-x: scroll;
 
-  // background-color: aquamarine; /s/추후 삭제
+  // background-color: aquamarine; //추후 삭제
+
+  @media (width <= 960px) {
+    gap: 80px;
+  }
 
   & a {
     font-family: Happiness-Sans-Title;
     font-size: 36px;
-    font-weight: 900;
     color: black;
     text-decoration: none;
 
+    //모바일 사이즈 조정
+    @media (width <= 430px) {
+      font-size: 24px;
+    }
+
     &:hover {
-      text-decoration: underline red wavy 4px;
+      text-decoration: underline #fefff3 wavy 3px;
+    }
+  }
+
+  &__left {
+    display: flex;
+    gap: 80px;
+
+    @media (width <= 960px) {
+      gap: 48px;
+    }
+
+    &-text {
+      @media (width <= 960px) {
+        display: none;
+      }
+    }
+
+    &-icon {
+      display: none;
+      @media (width <= 960px) {
+        display: inline;
+      }
     }
   }
 }
@@ -56,20 +94,31 @@ p {
 .header {
   display: flex;
   justify-content: center;
+  font-size: 14px;
+  @media (width <= 430px) {
+    font-size: 12px;
+  }
 
   &__content {
     & h1 {
+      margin-bottom: 12px;
       font-family: Happiness-Sans-Bold;
     }
 
     max-width: 900px;
     text-align: center;
+
+    & p {
+      padding-inline: 24px;
+
+      //모바일 사이즈 조정
+    }
   }
 }
 
 .main {
   width: 100%;
-  padding: 24px;
+  padding-inline: 24px;
   font-family: Happiness-Sans-Regular;
 
   & ol {
@@ -79,7 +128,7 @@ p {
   }
 
   & li {
-    padding: 10px 0;
+    padding: 12px 0;
     margin: 0;
     border-bottom: 1px solid black; /* 모든 리스트 아이템에 아래쪽 선 추가 */
   }
@@ -97,24 +146,24 @@ p {
     &-number {
       padding-block: 4px;
       padding-inline: 12px;
-      font-size: 20px;
+      font-size: 16px;
       color: white;
-      background-color: red;
+      background-color: oklch(65% 0.2 140deg);
       border-radius: 999px;
     }
 
     &-title {
-      font-size: 24px;
+      font-size: 20px;
     }
 
     &-button {
       display: inline-block;
-      padding: 10px 20px;
-      font-size: 32px;
+      padding-inline: 20px;
+      font-size: 28px;
       transition: transform 0.3s ease; /* 회전 애니메이션 추가 */
 
       &.rotate {
-        transform: rotate(45deg); /* 클릭시 90도 회전 */
+        transform: rotate(-45deg); /* 클릭시 90도 회전 */
       }
     }
   }
