--- a/style/style.css
+++ b/style/style.css
@@ -11,53 +11,127 @@
   font-family: Happiness-Sans-Title;
   src: url("../../../webfont/Happiness-Sans-Title.woff2");
 }
-* {
+*,
+::before,
+::after {
   box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Happiness-Sans-Regular;
+  font-size: 18px;
+  line-height: 1.5;
+  background-color: oklch(9400% 0.1 141deg);
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+
+.section {
+  margin-bottom: 24px;
 }
 
 .nav {
   display: flex;
-  gap: 24px;
+  gap: 160px;
   justify-content: space-between;
-  padding: 12px;
+  padding: 24px;
   overflow-x: scroll;
-  background-color: aquamarine;
+}
+@media (width <= 960px) {
+  .nav {
+    gap: 80px;
+  }
 }
 .nav a {
   font-family: Happiness-Sans-Title;
   font-size: 36px;
-  font-weight: 900;
   color: black;
   text-decoration: none;
 }
+@media (width <= 430px) {
+  .nav a {
+    font-size: 24px;
+  }
+}
 .nav a:hover {
-  -webkit-text-decoration: underline red wavy 4px;
-          text-decoration: underline red wavy 4px;
+  -webkit-text-decoration: underline #fefff3 wavy 3px;
+          text-decoration: underline #fefff3 wavy 3px;
+}
+.nav__left {
+  display: flex;
+  gap: 80px;
+}
+@media (width <= 960px) {
+  .nav__left {
+    gap: 48px;
+  }
+}
+@media (width <= 960px) {
+  .nav__left-text {
+    display: none;
+  }
+}
+.nav__left-icon {
+  display: none;
+}
+@media (width <= 960px) {
+  .nav__left-icon {
+    display: inline;
+  }
 }
 
 .main {
-  padding: 12px;
+  padding-inline: 12px;
 }
 .main--cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* 3개의 열을 동일한 너비로 설정 */
-  gap: 20px; /* 카드들 사이의 간격 */
+  /* 카드들 사이의 간격 */
+  gap: 20px 12px;
+}
+@media (width <= 768px) {
+  .main--cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (width <= 480px) {
+  .main--cards {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 .card {
+  display: flex;
   flex-direction: column; /* 세로 방향으로 정렬 */
   align-items: center; /* 수평 중앙 정렬 */
   justify-content: center; /* 수직 중앙 정렬 */
+  color: currentcolor;
   text-align: center;
-  background-color: aqua;
+  text-decoration: none;
 }
 .card img {
+  display: block;
   max-width: 100%; /* 이미지를 카드의 너비에 맞추어 조정 */
-  height: 100%;
-  margin-bottom: 10px; /* 이미지와 텍스트 사이의 간격 */
+  aspect-ratio: 800/600;
+  margin-bottom: 12px;
   -o-object-fit: contain;
      object-fit: contain;
 }
-.card p {
+.card--text {
+  overflow: hidden;
   text-align: center;
+}
+.card--text-title {
+  font-family: Happiness-Sans-Bold;
+  font-size: 14px;
+}
+.card--text-subtitle {
+  font-size: 10px;
 }
