--- a/style/style.scss
+++ b/style/style.scss
@@ -13,59 +13,138 @@
   src: url('../../../webfont/Happiness-Sans-Title.woff2');
 }
 
-* {
+*,
+::before,
+::after {
   box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Happiness-Sans-Regular;
+  font-size: 18px;
+  line-height: 1.5;
+  background-color: oklch(9400% 0.1 141deg);
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+
+.section {
+  margin-bottom: 24px;
 }
 
 .nav {
   display: flex;
-  gap: 24px;
+  gap: 160px;
   justify-content: space-between;
-  padding: 12px;
+  padding: 24px;
   overflow-x: scroll;
-  background-color: aquamarine; //추후 삭제
+
+  // background-color: aquamarine; //추후 삭제
+
+  @media (width <= 960px) {
+    gap: 80px;
+  }
 
   & a {
     font-family: Happiness-Sans-Title;
     font-size: 36px;
-    font-weight: 900;
     color: black;
     text-decoration: none;
 
+    //모바일 사이즈 조정
+    @media (width <= 430px) {
+      font-size: 24px;
+    }
+
     &:hover {
-      text-decoration: underline red wavy 4px;
+      text-decoration: underline #fefff3 wavy 3px;
+    }
+  }
+
+  &__left {
+    display: flex;
+    gap: 80px;
+
+    @media (width <= 960px) {
+      gap: 48px;
+    }
+
+    &-text {
+      @media (width <= 960px) {
+        display: none;
+      }
+    }
+
+    &-icon {
+      display: none;
+      @media (width <= 960px) {
+        display: inline;
+      }
     }
   }
 }
 
 .main {
-  padding: 12px;
+  padding-inline: 12px;
 
-  // background-color: blue; //추후삭제
+  // background-color: lightblue; //추후삭제
 
   &--cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* 3개의 열을 동일한 너비로 설정 */
-    gap: 20px; /* 카드들 사이의 간격 */
-    // background-color: brown; //추후 삭제
+
+    @media (width <= 768px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (width <= 480px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    /* 카드들 사이의 간격 */
+    gap: 20px 12px;
+
+    // background-color: lightcoral; //추후 삭제
   }
 }
 
 .card {
+  display: flex;
   flex-direction: column; /* 세로 방향으로 정렬 */
   align-items: center; /* 수평 중앙 정렬 */
   justify-content: center; /* 수직 중앙 정렬 */
+  color: currentcolor;
   text-align: center;
-  background-color: aqua;
+  text-decoration: none;
+
+  // background-color: aqua;
+  // background-color: oklch(9950% 0.01 110deg);
 
   & img {
+    display: block;
     max-width: 100%; /* 이미지를 카드의 너비에 맞추어 조정 */
-    height: 100%;
-    margin-bottom: 10px; /* 이미지와 텍스트 사이의 간격 */
+    aspect-ratio: 800/600;
+    margin-bottom: 12px;
     object-fit: contain;
   }
 
-  & p {
+  &--text {
+    overflow: hidden;
     text-align: center;
+
+    &-title {
+      font-family: Happiness-Sans-Bold;
+      font-size: 14px;
+    }
+
+    &-subtitle {
+      font-size: 10px;
+    }
   }
 }
