--- a/Home/style/style.scss
+++ b/Home/style/style.scss
@@ -45,10 +45,11 @@ p {
   justify-content: space-between;
   padding: 24px;
   overflow-x: scroll;
+  scrollbar-width: none;
 
   // background-color: aquamarine; //추후 삭제
 
-  @media (width <= 960px) {
+  @media (width <= 768px) {
     gap: 80px;
   }
 
@@ -59,12 +60,13 @@ p {
     text-decoration: none;
 
     //모바일 사이즈 조정
-    @media (width <= 430px) {
+    @media (width <= 480px) {
       font-size: 24px;
     }
 
     &:hover {
-      text-decoration: underline #fefff3 wavy 3px;
+      // text-decoration: underline #3fb02c dotted 5px;
+      color: #3fb02c;
     }
   }
 
@@ -72,19 +74,19 @@ p {
     display: flex;
     gap: 80px;
 
-    @media (width <= 960px) {
+    @media (width <= 768px) {
       gap: 48px;
     }
 
     &-text {
-      @media (width <= 960px) {
+      @media (width <= 768px) {
         display: none;
       }
     }
 
     &-icon {
       display: none;
-      @media (width <= 960px) {
+      @media (width <= 768px) {
         display: inline;
       }
     }
@@ -156,7 +158,7 @@ p {
       font-size: 20px;
     }
 
-    &-button {
+    &-togglebutton {
       display: inline-block;
       padding-inline: 20px;
       font-size: 28px;
@@ -167,4 +169,9 @@ p {
       }
     }
   }
+}
+
+// 참고자료
+.hidden {
+  display: none;
 }
