--- a/deatil/cinenight/style/style.css
+++ b/deatil/cinenight/style/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @font-face {
   font-family: Happiness-Sans-Regular;
   src: url("../../../webfont/Happiness-Sans-Regular.woff2");
@@ -64,6 +63,19 @@ p {
 .nav a:hover {
   color: #3fb02c;
 }
+@media (width <= 768px) {
+  .nav__right-text {
+    display: none;
+  }
+}
+.nav__right-icon {
+  display: none;
+}
+@media (width <= 768px) {
+  .nav__right-icon {
+    display: inline;
+  }
+}
 .nav__left {
   display: flex;
   gap: 80px;
@@ -87,73 +99,67 @@ p {
   }
 }
 
-.header {
-  display: flex;
-  justify-content: center;
-  font-size: 14px;
-}
-@media (width <= 430px) {
-  .header {
-    font-size: 12px;
-  }
-}
 .header__content {
-  max-width: 900px;
-  text-align: center;
-}
-.header__content h1 {
-  margin-bottom: 12px;
-  font-family: Happiness-Sans-Bold;
-}
-.header__content p {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
   padding-inline: 24px;
+  margin-block: 0;
+  list-style: none;
+}
+.header__content-all {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 35px;
+  padding: 10px 20px;
+  font-size: 12px;
+  line-height: 1.5;
+  text-align: center;
+  border-radius: 999px;
+}
+.header__content-black {
+  color: black;
+  background-color: #fefff3;
+}
+.header__content-highlight {
+  color: #fefff3;
+  background-color: #3fb02c;
 }
 
 .main {
-  width: 100%;
-  padding-inline: 24px;
-  font-family: Happiness-Sans-Regular;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 24px;
+  margin-inline: 32px;
 }
-.main ol {
-  padding: 0;
-  margin: 0;
-  list-style: none; /* 기본 리스트 스타일도 제거 */
+.main__content > div {
+  margin-bottom: 20px;
 }
-.main li {
-  padding: 12px 0;
-  margin: 0;
-  border-bottom: 1px solid black; /* 모든 리스트 아이템에 아래쪽 선 추가 */
+.main__content-left {
+  background-color: #fefff3;
 }
-.mainli:last-child {
-  border-bottom: none; /* 마지막 리스트 아이템의 아래쪽 선 제거 */
+.main__content-leftitem > img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
-.main--content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-inline: 32px;
+.main__content-grid2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
-.main--content-number {
-  padding-block: 4px;
-  padding-inline: 12px;
-  font-size: 16px;
-  color: white;
-  background-color: oklch(65% 0.2 140deg);
-  border-radius: 999px;
+.main__content-grid3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
-.main--content-title {
-  font-size: 20px;
-}
-.main--content-togglebutton {
-  display: inline-block;
-  padding-inline: 20px;
-  font-size: 28px;
-  transition: transform 0.3s ease; /* 회전 애니메이션 추가 */
-}
-.main--content-togglebutton.rotate {
-  transform: rotate(-45deg); /* 클릭시 90도 회전 */
+.main__content-right > * {
+  margin-bottom: 24px;
 }
 
-.hidden {
-  display: none;
+.highlight {
+  color: #fefff3;
+  background-color: black;
 }
