--- a/style/style.scss
+++ b/style/style.scss
@@ -45,10 +45,11 @@ p {
   justify-content: space-between;
   padding: 24px;
   overflow-x: scroll;
+  scrollbar-width: none;
 
   // background-color: aquamarine; //추후 삭제
 
-  @media (width <= 960px) {
+  @media (width <= 768px) {
     gap: 80px;
   }
 
@@ -59,12 +60,13 @@ p {
     text-decoration: none;
 
     //모바일 사이즈 조정
-    @media (width <= 430px) {
+    @media (width <= 480px) {
       font-size: 24px;
     }
 
     &:hover {
-      text-decoration: underline #fefff3 wavy 3px;
+      // text-decoration: underline #3fb02c dotted 5px;
+      color: #3fb02c;
     }
   }
 
@@ -72,19 +74,19 @@ p {
     display: flex;
     gap: 80px;
 
-    @media (width <= 960px) {
+    @media (width <= 768px) {
       gap: 48px;
     }
 
     &-text {
-      @media (width <= 960px) {
+      @media (width <= 768px) {
         display: none;
       }
     }
 
     &-icon {
       display: none;
-      @media (width <= 960px) {
+      @media (width <= 768px) {
         display: inline;
       }
     }
@@ -108,7 +110,7 @@ p {
     }
 
     /* 카드들 사이의 간격 */
-    gap: 20px 12px;
+    gap: 40px 16px;
 
     // background-color: lightcoral; //추후 삭제
   }
@@ -140,11 +142,12 @@ p {
 
     &-title {
       font-family: Happiness-Sans-Bold;
-      font-size: 14px;
+      font-size: 18px;
     }
 
     &-subtitle {
-      font-size: 10px;
+      font-size: 14px;
+      color: gray;
     }
   }
 }
