--- a/deatil/cinenight/style/style.css
+++ b/deatil/cinenight/style/style.css
@@ -140,10 +140,12 @@ p {
   margin-inline: 32px;
 }
 .main__content-left {
+  position: relative;
+  overflow-y: scroll;
   background-color: #fefff3;
 }
 .main__content-left > div {
-  margin-bottom: 24px;
+  margin-bottom: 48px;
 }
 .main__content-leftitem > img {
   display: block;
@@ -153,6 +155,7 @@ p {
 .main__content-grid2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  padding-inline: 48px;
 }
 .main__content-grid3 {
   display: grid;
@@ -170,6 +173,7 @@ p {
 }
 .main__content-right > ul > * {
   margin-bottom: 4px;
+  font-size: 16px;
 }
 
 .highlight {
