--- a/deatil/cinenight/style/style.scss
+++ b/deatil/cinenight/style/style.scss
@@ -168,11 +168,13 @@ p {
 
   &__content {
     &-left {
-      > div {
-        margin-bottom: 24px;
-      }
-
+      position: relative;
+      overflow-y: scroll;
       background-color: #fefff3;
+
+      > div {
+        margin-bottom: 48px;
+      }
     }
 
     &-leftitem {
@@ -186,6 +188,7 @@ p {
     &-grid2 {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
+      padding-inline: 48px;
     }
 
     &-grid3 {
@@ -206,6 +209,7 @@ p {
 
         > * {
           margin-bottom: 4px;
+          font-size: 16px;
         }
       }
     }
