--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,7 @@
+$lightgreen: #c3ffb9;
+$deepgreen: #3fb02c;
+$fontcolor-gray: #2d2d2d;
+
 @font-face {
   font-family: Happiness-Sans-Regular;
   src: url('../../../webfont/Happiness-Sans-Regular.woff2');
@@ -24,7 +28,7 @@ body {
   font-family: Happiness-Sans-Regular;
   font-size: 18px;
   line-height: 1.5;
-  background-color: oklch(9400% 0.1 141deg);
+  background-color: $lightgreen;
 }
 
 h1,
@@ -36,7 +40,12 @@ p {
 }
 
 .section {
-  margin-bottom: 24px;
+  &:nth-child(2) {
+    margin-top: 110px;
+    @media (width <= 480px) {
+      margin-top: 90px;
+    }
+  }
 }
 
 .clover {
@@ -47,15 +56,15 @@ p {
   height: auto;
   filter: invert(0%); /* 기본적으로 색상 변환 없음 */
   animation: fall 5s forwards, colorChange 5s forwards;
-}
 
-@keyframes fall {
-  from {
-    top: -100px;
-  }
+  @keyframes fall {
+    from {
+      top: -100px;
+    }
 
-  to {
-    top: 100%;
+    to {
+      top: 100%;
+    }
   }
 }
 
@@ -71,7 +80,7 @@ p {
   overflow-x: scroll;
   scrollbar-width: none;
 
-  @media (width <= 768px) {
+  @media (width <= 1024px) {
     gap: 80px;
   }
 
@@ -88,7 +97,7 @@ p {
 
     &:hover {
       // text-decoration: underline #3fb02c dotted 5px;
-      color: #3fb02c;
+      color: $deepgreen;
     }
   }
 
@@ -96,19 +105,19 @@ p {
     display: flex;
     gap: 80px;
 
-    @media (width <= 768px) {
-      gap: 48px;
+    @media (width <= 1024px) {
+      gap: 32px;
     }
 
     &-text {
-      @media (width <= 768px) {
+      @media (width <= 1024px) {
         display: none;
       }
     }
 
     &-icon {
       display: none;
-      @media (width <= 768px) {
+      @media (width <= 1024px) {
         display: inline;
       }
     }
@@ -117,6 +126,7 @@ p {
 
 .main {
   padding-inline: 12px;
+  margin-inline: 24px;
 
   // background-color: lightblue; //추후삭제
 
@@ -169,7 +179,16 @@ p {
 
     &-subtitle {
       font-size: 14px;
-      color: gray;
+      color: oklch(30% 0 0deg);
     }
+  }
+}
+
+.footer {
+  margin-top: 60px;
+  margin-bottom: 40px;
+
+  > p {
+    text-align: center;
   }
 }
