--- a/deatil/cinenight/style/style.css
+++ b/deatil/cinenight/style/style.css
@@ -18,6 +18,7 @@
 }
 
 body {
+  height: 100vh;
   margin: 0;
   font-family: Happiness-Sans-Regular;
   font-size: 18px;
@@ -103,7 +104,7 @@ p {
 
 .main {
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 2fr 1fr;
   gap: 24px;
 }
 @media (width <= 780px) {
@@ -156,7 +157,7 @@ p {
 }
 .main__content-left {
   position: relative;
-  height: 1280px;
+  height: 100vh;
   overflow-y: scroll;
   background-color: #fefff3;
   border-right: 1px solid #282828;
