--- a/deatil/silver/style/style.scss
+++ b/deatil/silver/style/style.scss
@@ -223,7 +223,7 @@ p {
   &__content {
     &-left {
       position: relative;
-      height: 1280px;
+      height: 100vh;
       overflow-y: scroll;
       background-color: #fefff3;
       border-right: 1px solid #282828;
