--- a/deatil/timefly/style/style.css
+++ b/deatil/timefly/style/style.css
@@ -156,7 +156,7 @@ p {
 }
 .main__content-left {
   position: relative;
-  height: 1280px;
+  height: 100vh;
   overflow-y: scroll;
   background-color: #fefff3;
   border-right: 1px solid #282828;
