--- a/style/style.css
+++ b/style/style.css
@@ -33,46 +33,55 @@ p {
   margin: 0;
 }
 
-.section:nth-child(2) {
-  margin-top: 110px;
+.section {
+  margin-bottom: 64px;
 }
-@media (width <= 480px) {
-  .section:nth-child(2) {
-    margin-top: 90px;
-  }
+.section:nth-child(1) {
+  margin-bottom: 0;
+}
+.section:last-child {
+  margin-bottom: 0;
 }
 
 .clover {
-  position: absolute;
-  top: 0;
-  z-index: 2;
-  width: 100px; /* 이미지 크기 */
+  box-sizing: border-box;
+  width: 100%;
   height: auto;
-  filter: invert(0%); /* 기본적으로 색상 변환 없음 */
-  animation: fall 5s forwards, colorChange 5s forwards;
+  overflow: hidden;
+  white-space: nowrap;
+  background-color: #fefff3;
+  border-block: 1px solid #000;
 }
-@keyframes fall {
-  from {
-    top: -100px;
-  }
-  to {
-    top: 100%;
-  }
+.clover__banner {
+  display: inline-block;
+  white-space: nowrap;
+  animation: moveClover 20s linear infinite;
+}
+.clover__banner-img {
+  width: 30px; /* 클로버 크기 조정 */
+  height: 30px;
+  margin-block: 7px 3px;
+  margin-inline: 7px;
 }
 
+@keyframes moveClover {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-50%);
+  }
+}
 .nav {
-  position: fixed;
-  top: 0;
-  z-index: 1000;
   display: flex;
   gap: 160px;
   justify-content: space-between;
-  width: 100%;
   padding: 24px;
   overflow-x: scroll;
   scrollbar-width: none;
+  border-bottom: 1px solid #282828;
 }
-@media (width <= 1024px) {
+@media (width <= 768px) {
   .nav {
     gap: 80px;
   }
@@ -80,7 +89,7 @@ p {
 .nav a {
   font-family: Happiness-Sans-Title;
   font-size: 36px;
-  color: black;
+  color: #282828;
   text-decoration: none;
 }
 @media (width <= 480px) {
@@ -89,18 +98,31 @@ p {
   }
 }
 .nav a:hover {
-  color: #3fb02c;
+  color: #1fb705;
+}
+@media (width <= 768px) {
+  .nav__right-text {
+    display: none;
+  }
+}
+.nav__right-icon {
+  display: none;
+}
+@media (width <= 768px) {
+  .nav__right-icon {
+    display: inline;
+  }
 }
 .nav__left {
   display: flex;
   gap: 80px;
 }
-@media (width <= 1024px) {
+@media (width <= 768px) {
   .nav__left {
-    gap: 32px;
+    gap: 48px;
   }
 }
-@media (width <= 1024px) {
+@media (width <= 768px) {
   .nav__left-text {
     display: none;
   }
@@ -108,10 +130,22 @@ p {
 .nav__left-icon {
   display: none;
 }
-@media (width <= 1024px) {
+@media (width <= 768px) {
   .nav__left-icon {
     display: inline;
   }
+}
+
+.header {
+  background-color: #fefff3;
+  border-top: 1px solid #282828;
+  border-bottom: 1px solid #282828;
+}
+.header > h1 {
+  font-family: Happiness-Sans-Title;
+}
+.header > p {
+  font-family: Happiness-Sans-regular;
 }
 
 .main {
@@ -122,7 +156,7 @@ p {
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* 3개의 열을 동일한 너비로 설정 */
   /* 카드들 사이의 간격 */
-  gap: 40px 16px;
+  gap: 24px 24px;
 }
 @media (width <= 768px) {
   .main--cards {
@@ -136,33 +170,67 @@ p {
 }
 
 .card {
+  position: relative;
   display: flex;
   flex-direction: column; /* 세로 방향으로 정렬 */
   align-items: center; /* 수평 중앙 정렬 */
   justify-content: center; /* 수직 중앙 정렬 */
-  color: currentcolor;
-  text-align: center;
-  text-decoration: none;
+  border: 1px solid #282828;
 }
 .card img {
   display: block;
-  max-width: 100%; /* 이미지를 카드의 너비에 맞추어 조정 */
-  aspect-ratio: 800/600;
-  margin-bottom: 12px;
+  width: 100%; /* 이미지를 카드의 너비에 맞추어 조정 */
+  aspect-ratio: 800/800;
   -o-object-fit: contain;
      object-fit: contain;
 }
 .card--text {
-  overflow: hidden;
-  text-align: center;
+  position: absolute;
+  z-index: 999;
+  padding: 24px;
+  color: #fefff3;
+  text-decoration: none;
+  opacity: 0;
+}
+.card--text:hover {
+  opacity: 1;
 }
 .card--text-title {
+  top: 10;
+  left: 10;
   font-family: Happiness-Sans-Bold;
-  font-size: 18px;
+  font-size: 24px;
+  text-align: center;
 }
 .card--text-subtitle {
-  font-size: 14px;
-  color: oklch(30% 0 0deg);
+  top: 0;
+  left: 10;
+  font-family: Happiness-Sans-regular;
+  font-size: 18px;
+  text-align: center;
+}
+.card:hover {
+  background-color: #1fb705;
+}
+.card:hover > img {
+  opacity: 0;
+}
+.card:hover > div {
+  opacity: 1;
+}
+.card--newicon {
+  position: absolute;
+  top: -10;
+  left: 0;
+  z-index: 999;
+}
+.card--newicon > img {
+  width: 70px;
+}
+.card--newicon > p {
+  font-family: Happiness-Sans-Bold;
+  font-size: 24px;
+  color: #282828;
 }
 
 .footer {
