--- a/style/style.scss
+++ b/style/style.scss
@@ -40,54 +40,152 @@ p {
 }
 
 .section {
-  &:nth-child(2) {
-    margin-top: 110px;
-    @media (width <= 480px) {
-      margin-top: 90px;
-    }
+  margin-bottom: 64px;
+
+  &:nth-child(1) {
+    margin-bottom: 0;
   }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  // &:nth-child(2) {
+  //   margin-top: 110px;
+  //   @media (width <= 480px) {
+  //     margin-top: 90px;
+  //   }
+  // }
 }
 
 .clover {
-  position: absolute;
-  top: 0;
-  z-index: 2;
-  width: 100px; /* 이미지 크기 */
+  box-sizing: border-box;
+  width: 100%;
   height: auto;
-  filter: invert(0%); /* 기본적으로 색상 변환 없음 */
-  animation: fall 5s forwards, colorChange 5s forwards;
+  overflow: hidden;
+  white-space: nowrap;
+  background-color: #fefff3;
+  border-block: 1px solid #000;
 
-  @keyframes fall {
-    from {
-      top: -100px;
-    }
+  &__banner {
+    display: inline-block;
+    white-space: nowrap;
+    animation: moveClover 20s linear infinite;
 
-    to {
-      top: 100%;
+    &-img {
+      width: 30px; /* 클로버 크기 조정 */
+      height: 30px;
+      margin-block: 7px 3px;
+      margin-inline: 7px;
     }
   }
 }
 
+@keyframes moveClover {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(-50%);
+  }
+}
+
+// .clover {
+//   position: absolute;
+//   top: 0;
+//   z-index: 2;
+//   width: 100px; /* 이미지 크기 */
+//   height: auto;
+//   filter: invert(0%); /* 기본적으로 색상 변환 없음 */
+//   animation: fall 5s forwards, colorChange 5s forwards;
+
+//   @keyframes fall {
+//     from {
+//       top: -100px;
+//     }
+
+//     to {
+//       top: 100%;
+//     }
+//   }
+// }
+
+// .nav {
+//   position: fixed;
+//   top: 0;
+//   z-index: 1000;
+//   display: flex;
+//   gap: 160px;
+//   justify-content: space-between;
+//   width: 100%;
+//   padding: 24px;
+//   overflow-x: scroll;
+//   scrollbar-width: none;
+
+//   @media (width <= 1024px) {
+//     gap: 80px;
+//   }
+
+//   & a {
+//     font-family: Happiness-Sans-Title;
+//     font-size: 36px;
+//     color: black;
+//     text-decoration: none;
+
+//     //모바일 사이즈 조정
+//     @media (width <= 480px) {
+//       font-size: 24px;
+//     }
+
+//     &:hover {
+//       // text-decoration: underline #3fb02c dotted 5px;
+//       color: $deepgreen;
+//     }
+//   }
+
+//   &__left {
+//     display: flex;
+//     gap: 80px;
+
+//     @media (width <= 1024px) {
+//       gap: 32px;
+//     }
+
+//     &-text {
+//       @media (width <= 1024px) {
+//         display: none;
+//       }
+//     }
+
+//     &-icon {
+//       display: none;
+//       @media (width <= 1024px) {
+//         display: inline;
+//       }
+//     }
+//   }
+// }
+
 .nav {
-  position: fixed;
-  top: 0;
-  z-index: 1000;
   display: flex;
   gap: 160px;
   justify-content: space-between;
-  width: 100%;
   padding: 24px;
   overflow-x: scroll;
   scrollbar-width: none;
+  border-bottom: 1px solid #282828;
 
-  @media (width <= 1024px) {
+  // background-color: aquamarine; //추후 삭제
+
+  @media (width <= 768px) {
     gap: 80px;
   }
 
   & a {
     font-family: Happiness-Sans-Title;
     font-size: 36px;
-    color: black;
+    color: #282828;
     text-decoration: none;
 
     //모바일 사이즈 조정
@@ -97,7 +195,22 @@ p {
 
     &:hover {
       // text-decoration: underline #3fb02c dotted 5px;
-      color: $deepgreen;
+      color: #1fb705;
+    }
+  }
+
+  &__right {
+    &-text {
+      @media (width <= 768px) {
+        display: none;
+      }
+    }
+
+    &-icon {
+      display: none;
+      @media (width <= 768px) {
+        display: inline;
+      }
     }
   }
 
@@ -105,22 +218,36 @@ p {
     display: flex;
     gap: 80px;
 
-    @media (width <= 1024px) {
-      gap: 32px;
+    @media (width <= 768px) {
+      gap: 48px;
     }
 
     &-text {
-      @media (width <= 1024px) {
+      @media (width <= 768px) {
         display: none;
       }
     }
 
     &-icon {
       display: none;
-      @media (width <= 1024px) {
+      @media (width <= 768px) {
         display: inline;
       }
     }
+  }
+}
+
+.header {
+  background-color: #fefff3;
+  border-top: 1px solid #282828;
+  border-bottom: 1px solid #282828;
+
+  > h1 {
+    font-family: Happiness-Sans-Title;
+  }
+
+  > p {
+    font-family: Happiness-Sans-regular;
   }
 }
 
@@ -142,46 +269,115 @@ p {
     }
 
     /* 카드들 사이의 간격 */
-    gap: 40px 16px;
+    gap: 24px 24px;
 
     // background-color: lightcoral; //추후 삭제
   }
 }
 
 .card {
+  position: relative;
   display: flex;
   flex-direction: column; /* 세로 방향으로 정렬 */
   align-items: center; /* 수평 중앙 정렬 */
   justify-content: center; /* 수직 중앙 정렬 */
-  color: currentcolor;
-  text-align: center;
-  text-decoration: none;
-
-  // background-color: aqua;
-  // background-color: oklch(9950% 0.01 110deg);
+  border: 1px solid #282828;
 
   & img {
     display: block;
-    max-width: 100%; /* 이미지를 카드의 너비에 맞추어 조정 */
-    aspect-ratio: 800/600;
-    margin-bottom: 12px;
+    width: 100%; /* 이미지를 카드의 너비에 맞추어 조정 */
+    aspect-ratio: 800/800;
+
+    // margin-bottom: 12px;
     object-fit: contain;
   }
 
   &--text {
-    overflow: hidden;
-    text-align: center;
+    position: absolute;
+    z-index: 999;
+    padding: 24px;
+    color: #fefff3;
+    text-decoration: none;
+    opacity: 0;
+
+    &:hover {
+      opacity: 1;
+    }
 
     &-title {
+      top: 10;
+      left: 10;
       font-family: Happiness-Sans-Bold;
-      font-size: 18px;
+      font-size: 24px;
+      text-align: center;
+
+      @media (width <= 768px) {
+        font-size: 20px;
+      }
+      @media (width <= 480px) {
+        font-size: 16px;
+      }
     }
 
     &-subtitle {
-      font-size: 14px;
-      color: oklch(30% 0 0deg);
+      top: 0;
+      left: 10;
+      font-family: Happiness-Sans-regular;
+      font-size: 18px;
+      text-align: center;
+
+      media (width <= 768px) {
+        font-size: 14px;
+      }
+      @media (width <= 480px) {
+        font-size: 12px;
+      }
     }
   }
+
+  &:hover {
+    > img {
+      opacity: 0;
+    }
+
+    > div {
+      opacity: 1;
+    }
+
+    background-color: #1fb705;
+  }
+
+  &--newicon {
+    position: absolute;
+    top: -10;
+    left: 0;
+    z-index: 999;
+
+    & > img {
+      width: 70px;
+    }
+
+    & > p {
+      font-family: Happiness-Sans-Bold;
+      font-size: 24px;
+      color: #282828;
+    }
+  }
+
+  // &--text {
+  //   overflow: hidden;
+  //   text-align: center;
+
+  //   &-title {
+  //     font-family: Happiness-Sans-Bold;
+  //     font-size: 18px;
+  //   }
+
+  //   &-subtitle {
+  //     font-size: 14px;
+  //     color: oklch(30% 0 0deg);
+  //   }
+  // }
 }
 
 .footer {
