--- a/style/style.css
+++ b/style/style.css
@@ -33,20 +33,11 @@ p {
   margin: 0;
 }
 
-.section {
-  margin-bottom: 64px;
-}
-.section:nth-child(1) {
-  margin-bottom: 0;
-}
-.section:last-child {
-  margin-bottom: 0;
-}
-
 .clover {
   box-sizing: border-box;
   width: 100%;
   height: auto;
+  margin-block: 24px;
   overflow: hidden;
   white-space: nowrap;
   background-color: #fefff3;
@@ -137,9 +128,14 @@ p {
 }
 
 .header {
+  margin-bottom: 40px;
   background-color: #fefff3;
   border-top: 1px solid #282828;
   border-bottom: 1px solid #282828;
+}
+.header__content {
+  padding: 48px;
+  text-align: center;
 }
 .header > h1 {
   font-family: Happiness-Sans-Title;
@@ -150,6 +146,7 @@ p {
 
 .main {
   padding-inline: 12px;
+  margin-block: 40px;
   margin-inline: 24px;
 }
 .main--cards {
@@ -202,12 +199,32 @@ p {
   font-size: 24px;
   text-align: center;
 }
+@media (width <= 768px) {
+  .card--text-title {
+    font-size: 20px;
+  }
+}
+@media (width <= 480px) {
+  .card--text-title {
+    font-size: 16px;
+  }
+}
 .card--text-subtitle {
   top: 0;
   left: 10;
   font-family: Happiness-Sans-regular;
   font-size: 18px;
   text-align: center;
+}
+@media (width <= 768px) {
+  .card--text-subtitle {
+    font-size: 14px;
+  }
+}
+@media (width <= 480px) {
+  .card--text-subtitle {
+    font-size: 12px;
+  }
 }
 .card:hover {
   background-color: #1fb705;
