--- a/style/style.scss
+++ b/style/style.scss
@@ -58,6 +58,30 @@ p {
 //   // }
 // }
 
+.sidebar {
+  position: fixed;
+  top: 500px;
+  right: 0;
+  z-index: 999;
+
+  &__content {
+    margin: 24px;
+
+    &-inside {
+      display: flex;
+      gap: 12px;
+      align-items: center;
+      margin: 8px;
+      font-family: Happiness-Sans-Bold;
+
+      & > img {
+        width: 30px;
+        height: 30px;
+      }
+    }
+  }
+}
+
 .clover {
   box-sizing: border-box;
   width: 100%;
@@ -74,7 +98,7 @@ p {
     animation: moveClover 20s linear infinite;
 
     &-img {
-      width: 30px; /* 클로버 크기 조정 */
+      width: 30px;
       height: 30px;
       margin-block: 7px 3px;
       margin-inline: 7px;
@@ -239,27 +263,40 @@ p {
 }
 
 .header {
-  margin-bottom: 40px;
+  margin-bottom: 60px;
+  font-size: 18px;
   background-color: #fefff3;
-  border-top: 1px solid #282828;
+
+  // border-top: 1px solid #282828;
   border-bottom: 1px solid #282828;
+  @media (width <= 480px) {
+    font-size: 16px;
+  }
 
   &__content {
     padding: 48px;
     text-align: center;
-  }
+    @media (width <= 480px) {
+      padding: 24px;
+    }
 
-  > h1 {
-    font-family: Happiness-Sans-Title;
-  }
+    &-title {
+      margin-bottom: 24px;
+      font-family: Happiness-Sans-Title;
+      overflow-wrap: break-word;
+    }
 
-  > p {
-    font-family: Happiness-Sans-regular;
+    &-text {
+      font-family: Happiness-Sans-regular;
+
+      &:first-child {
+        margin-bottom: 8px;
+      }
+    }
   }
 }
 
 .main {
-  padding-inline: 12px;
   margin-block: 40px;
   margin-inline: 24px;
 
@@ -357,18 +394,22 @@ p {
 
   &--newicon {
     position: absolute;
-    top: -10;
-    left: 0;
+    top: -10px;
+    left: -10px;
     z-index: 999;
 
     & > img {
-      width: 70px;
+      width: 40px;
     }
 
     & > p {
+      position: absolute;
+      top: 6px;
+      left: 13px;
+      z-index: 999;
       font-family: Happiness-Sans-Bold;
-      font-size: 24px;
-      color: #282828;
+      font-size: 18px;
+      color: #fefff3;
     }
   }
 
