--- a/detail/onecam/style/style.scss
+++ b/detail/onecam/style/style.scss
@@ -265,7 +265,7 @@ p {
     }
 
     &-leftitem {
-      > img {
+      & > img {
         display: block;
         max-width: 100%;
         height: auto;
